<resources>
    <string name="app_name">Strogger</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_password_matching">Passwords do not match</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="prompt_pass">Password</string>
    <string name="login_save">Stay logged in?</string>
    <string name="password_forgotten">Forgot password?</string>

    <string name="Open">NavBar</string>
    <string name="Close">NavBar</string>

    <string name="toolbar_title">Dynamic Title</string>
    <string name="end_run">End Run</string>
    <string name="pause">Pause</string>
    <string name="create_account">Create Account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_signed_up">Already signed up?</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="strogger">Strogger</string>

    <color name="lightText">#FFFFFF</color>
    <color name="darkText">#5E626C</color>
    <color name="background">#2A2F39</color>
    <color name="green">#44B84B</color>



</resources>
