<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity"
    android:background="@color/background">

    <!-- Login progress -->
    <ProgressBar
        android:indeterminateTint="@color/green"
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:layout_marginLeft="20px"
        android:layout_marginRight="20px"
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">


            <TextView
                android:textColor="@color/lightText"
                android:layout_marginTop="200px"
                android:text="@string/strogger"
                android:textSize="160px"
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </TextView>


            <TextView
                android:textColor="@color/darkText"
                android:layout_marginTop="40px"
                android:text="Together let's improve your stride."
                android:textSize="50px"
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </TextView>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="200px"
                app:theme="@style/textInput"
                android:textColorHint="@color/darkText">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/lightText" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:theme="@style/textInput"
                android:textColorHint="@color/darkText">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_pass"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/lightText"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:background="@drawable/button_background"
                android:id="@+id/email_sign_in_button"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="100px"
                android:text="@string/action_sign_in_short"
                android:textStyle="bold" />

            <Button
                android:textColor="@color/lightText"
                android:id="@+id/forgot_password_button"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password_forgotten" />
            <Button
                android:layout_gravity="bottom"
                android:textColor="@color/lightText"
                android:id="@+id/create_account_button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Register new user" />


        </LinearLayout>
    </ScrollView>

</LinearLayout>



